--- a/src/supply_chain_continious_model_backend/Cargo.toml
+++ b/src/supply_chain_continious_model_backend/Cargo.toml
@@ -12,3 +12,16 @@ crate-type = ["cdylib"]
 candid = "0.10"
 ic-cdk = "0.12"
 ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
+ic-stable-structures = "0.5.4"
+serde = "1.0.132"
+ic-cdk-macros = "0.8.1"
+serde_json = "1.0.93"
+getrandom = { version = "0.2.3", features = ["js"]}
+wasm-bindgen = "0.2.63"
+uuid = { version = "1.4.1", features = ["wasm-bindgen", "v4"] }
+rand_chacha = "0.3"
+
+rand = { version = "0.8", default-features = false, features = ["alloc"] }
+
+[dev-dependencies]
+rand_chacha = "0.3"
