--- a/src/supply_chain_continious_model_frontend/package.json
+++ b/src/supply_chain_continious_model_frontend/package.json
@@ -1,10 +1,20 @@
 {
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@dfinity/agent": "^0.15.7",
     "@dfinity/candid": "^0.15.7",
     "@dfinity/principal": "^0.15.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.2.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
