--- a/src/supply_chain_continious_model_frontend/package.json
+++ b/src/supply_chain_continious_model_frontend/package.json
@@ -9,7 +9,8 @@
     "buffer": "^6.0.3",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^11.2.12",
+    "popper.js": "^1.16.1-lts",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
